--- a/src/sections/SelectYourBoxer.astro
+++ b/src/sections/SelectYourBoxer.astro
@@ -169,57 +169,40 @@ const msFadeLuchador = 150
 
 <style>
 	.boxers-aside {
-		display: flex;
+		@apply relative flex h-32 overflow-x-scroll;
 		max-width: 100vw;
-		height: 8rem;
-		overflow-x: scroll;
-		position: relative;
 		scrollbar-width: none;
 	}
 
 	.boxers-nav {
-		display: flex;
-		gap: 0.5rem;
-		height: 100%;
-
-		padding: 1rem 5rem;
+		@apply flex h-full gap-2 px-20 py-4;
 	}
 
 	.boxer-link {
-		@apply size-40;
-
-		position: relative;
-		display: flex;
-		align-items: center;
-		flex-direction: column;
+		@apply relative flex size-40 flex-col items-center;
 		transition: opacity 0.3s ease;
 	}
 
 	.boxer-link-background {
-		position: absolute;
-		width: 100%;
-		bottom: 0;
-		display: block;
+		@apply absolute bottom-0 block w-full opacity-25;
 		background: linear-gradient(
 			180deg,
 			rgba(255, 255, 255, 1) 0%,
 			rgba(255, 255, 255, 0.5) 30%,
 			rgba(0, 0, 0, 0) 95%
 		);
-		opacity: 0.25;
 		height: 60%;
 		transition: filter 0.3s ease-in-out;
 	}
 
 	.boxer-link:hover {
-		opacity: 0.9;
+		@apply opacity-90;
 	}
 
 	.boxer-image {
-		object-fit: contain;
+		@apply h-full object-contain;
 		z-index: 2;
 		transition: all 0.3s ease-in-out;
-		height: 100%;
 		mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
 	}
 
@@ -240,12 +223,7 @@ const msFadeLuchador = 150
 
 	@media (min-width: 1280px) {
 		.boxers-aside {
-			padding: 0.5rem 0;
-			display: block;
-			max-width: none;
-			width: 100%;
-			overflow: hidden;
-			height: auto;
+			@apply block h-auto w-full max-w-none overflow-hidden px-0 py-2;
 		}
 
 		.boxers-nav {
